Move colors and some cleanup

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+body {
+  background-color: #f7f7f7;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
@@ -35,6 +39,6 @@ circle: {
 }
 
 #container {
-  //padding:50px;
-  background-color:#FFF;
+  //padding: 50px;
+  background-color: #e8e2c9;
 }
