--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,37 @@
 .App {
+  display: flex;
   text-align: center;
+  flex-wrap:wrap;
+  flex-direction:row;
+  align-items: center;
+  justify-content: space-around;
 }
 
 body {
-  background-color: #f7f7f7;
+  /*background-color: #ffffff;*/
+  background-image: url('brown.jpg');
+  height:100%;
+  width:100%;
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 100px;
+  width: 100px;
 }
 
 .App-header {
-  background-color: #222;
   height: 150px;
   padding: 20px;
-  color: white;
+  color: brown;
+  width: 100%;
+  margin-bottom: 20px;
 }
 
 .App-title {
-  font-size: 1.5em;
+  font-size: 2.3em;
+  font-family: Papyrus, fantasy;
+  margin-top:5px;
 }
 
 .App-intro {
